--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,118 @@ li a {
   display: flex;
   justify-content: center;
   align-items: center;
-  
+
 
 }
+
+
+*{
+  padding: 0px;
+  margin: 0px;
+}
+ul,ol,li{
+  list-style-type: none;
+}
+img{
+  max-width: 100%;
+  height: auto;
+}
+body{
+  font-family: 'Open Sans', sans-serif;
+}
+
+.outerwrap-user{
+  /* border-top: 12px solid #6200eb; */
+  max-width: 544px;
+  margin: 0 auto;
+  padding: 7px;
+  background: #ffffff;
+  position: relative;
+}
+.innerwrap-user {
+  display: flex;
+  align-items: center;
+  margin-bottom: 24px;
+}
+.user-text{
+  
+  max-width: 56%;
+}
+.user-img {
+  overflow: hidden;
+  max-width: 60px;
+  height: 60px;
+  display: flex;
+  border-radius: 50%;
+  margin-right: 18px;
+}
+.user-text h4{
+  font-size: 21px;
+  line-height: 28px;
+  text-transform: capitalize;
+  color: #000;
+  margin-bottom: 3px;
+}
+.user-text p{
+  font-size: 17px;
+  line-height: 22px;
+  font-weight: 700;
+  text-transform: capitalize;
+  color: #a8a8a8;
+}
+.innerwrap-user:first-child .time{
+  margin-left: 122px;
+}
+.time{
+  margin-left: 76px;
+  margin-top: -31px;
+}
+.time span{
+  display: inline-block;
+  font-size: 22px;
+  line-height: 47px;
+  color: #4d4d4d;
+}
+.arrow{
+  display: flex;
+}
+.arrow p{
+  padding-left: 32px;
+}
+.form {
+  position: absolute;
+  right: 28px;
+  transform: translateY(-18%);
+}
+/* FORM SECTION START */
+.form-outerwrap{
+  max-width: 20%;
+  margin: 0 auto;
+}
+.form-section{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 84px;
+
+}
+.form-section input{
+  border: none;
+  border-bottom: 2px solid #6200eb;
+  outline: none;
+  padding: 31px 42px 31px 5px;
+}
+.form-btn {
+  text-align: center;
+}
+.form-btn button{
+  background-color: #6200eb;
+  font-size: 14px;
+  padding: 8px 30px;
+  color: #fff;
+  border: navajowhite;
+  text-transform: capitalize;
+}
+.form-btn button:hover{
+  color: black;
+}
+/* FORM SECTION END */
